--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ nav img {
 }
 
 .comments {
-    background-color: aqua;
+    background-color: lightblue;
     margin: 20px 0 0 20px;
     width: 30vh;
     height: inherit;
